# TestCIRoleTect

./: .gitignore  LICENSE  LICENSE_APACHE  README.md  hackathon.md  index.html  model_data_card.md  package.json  tectonic.compiler
.github/workflows/: publish.yaml
application/api/: Cargo.toml  roleflux_web.db  roletect_web.db
application/api/src/: ai.rs  db.rs  main.rs  models.rs
application/api/src/handlers/: compiler.rs  cover_letters.rs  downloads.rs  inbox.rs  jobs.rs  mod.rs  pdf.rs  resumes.rs  settings.rs
assets/: RoleTect.tex  dataset.tex
extentions/: PRIVACY.md  README.md  rules.chrome  rules.firefox
extentions/chrome/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
extentions/firefox/: background.js  content.js  manifest.json  popup.js
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json  test_deepseek.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  db.rs  lib.rs  main.rs  s3.rs  server.rs
src-tauri/src/commands/: cloud.rs  compiler.rs  cover_letters.rs  data.rs  downloads.rs  inbox.rs  jobs.rs  mod.rs  pdf.rs  resumes.rs  settings.rs
src/components/: AboutTab.vue  CloudUploadOverlay.vue  CompilerTab.vue  CoverLetterDetailView.vue  CoverLettersTab.vue  CustomDialog.vue  CustomSelect.vue  DiagramTab.vue  FileTreeItem.vue  HomeTab.vue  InboxJobDetailView.vue  InboxTab.vue  JobDetailView.vue  JobParserView.vue  JobsTab.vue  ResumeDetailView.vue  ResumesTab.vue  SettingsTab.vue  SplashLoader.vue  Titlebar.vue
src/router/: index.ts
src/store/: cover_letters.ts  dialog.ts  inbox.ts  jobs.ts  resumes.ts  settings.ts
