[package]
name = "roletect_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
rig = { version = "0.37.0", features = ["gemini-grpc"] }
nanoid = "0.5.0"
tower-http = { version = "0.6.1", features = ["cors", "fs"] }
tectonic = "0.16.9"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
schemars = "1"
dotenvy = "0.15"
rig-bedrock = "0.38.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
